--- a/INFLUENZA.ipynb
+++ b/INFLUENZA.ipynb
@@ -44,8 +44,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IDS = [] #there you should store all  names\n",
-    "sequences = [] #there you should store all sequences"
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IDS = []\n",
+    "sequences = []\n",
+    "start_pattern = '>.*'\n",
+    "\n",
+    "with open('influenza_viruses', 'r') as f:\n",
+    "    for line in f:\n",
+    "        line = line.rstrip()\n",
+    "        if re.match(start_pattern, line):\n",
+    "            IDS.append(line)\n",
+    "        else:\n",
+    "             sequences.append(line.upper())"
    ]
   },
   {
@@ -281,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
