restored deleted parts

--- a/INFLUENZA.ipynb
+++ b/INFLUENZA.ipynb
@@ -44,8 +44,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IDS = [] #there you should store all  names\n",
-    "sequences = [] #there you should store all sequences"
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IDS = []\n",
+    "sequences = []\n",
+    "start_pattern = '>.*'\n",
+    "\n",
+    "with open('influenza_viruses', 'r') as f:\n",
+    "    for line in f:\n",
+    "        line = line.rstrip()\n",
+    "        if re.match(start_pattern, line):\n",
+    "            IDS.append(line)\n",
+    "        else:\n",
+    "             sequences.append(line.upper())"
    ]
   },
   {
@@ -266,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -312,22 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from urllib.request import urlretrieve\n",
-    "from IPython.display import Image\n",
-    "\n",
-    "\n",
-    "smiles = nam[-3]\n",
-    "urlretrieve('https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/smiles/'+smiles+'/PNG', 'smi_pic.png')\n",
-    "p = Image(filename='smi_pic.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -337,13 +340,20 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p"
+    "from urllib.request import urlretrieve\n",
+    "from IPython.display import Image\n",
+    "\n",
+    "\n",
+    "smiles = nam[-3]\n",
+    "urlretrieve('https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/smiles/'+smiles+'/PNG', 'smi_pic.png')\n",
+    "plot = Image(filename='smi_pic.png')\n",
+    "plot"
    ]
   }
  ],
