--- a/INFLUENZA.ipynb
+++ b/INFLUENZA.ipynb
@@ -323,9 +323,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiple Sequence Alignment (MSA): 249.96060967445374\n",
+      "K-mers: 3.3982269763946533\n",
+      "Lempel-Ziv Complexity: 691.3010659217834\n"
+     ]
+    }
+   ],
    "source": [
     "#To measure the execution time you may use time library and calculate the difference between the time before and after part of your code. Below an example:\n",
     "\n",
@@ -338,24 +348,24 @@
     "dist = linkage(X, method=\"average\")  #average = UPGMA method\n",
     "\n",
     "end_time = time.time()\n",
-    "seconds = end_time - start_time\n",
-    "print('Multiple Sequence Alignment (MSA): ' + seconds)\n",
+    "\n",
+    "print('Multiple Sequence Alignment (MSA): {seconds}'.format(seconds = end_time - start_time))\n",
     "start_time = time.time()\n",
     "\n",
     "X = pdist(MerMatrix(sequences)) \n",
     "dist = linkage(X, method=\"average\")\n",
     "\n",
     "end_time = time.time()\n",
-    "seconds = end_time - start_time\n",
-    "print('K-mers: ' + seconds)\n",
+    "print('K-mers: {seconds}'.format(seconds = end_time - start_time))\n",
     "start_time = time.time()\n",
     "\n",
     "X = pdist(LZMatrix(sequences)) \n",
     "dist = linkage(X, method=\"average\")\n",
     "\n",
     "end_time = time.time()\n",
-    "seconds = end_time - start_time\n",
-    "print('Lempel-Ziv Complexity: ' + seconds)"
+    "print('Lempel-Ziv Complexity: {seconds}'.format(seconds = end_time - start_time))\n",
+    "\n",
+    "print('The fastest method: K-mers; The slowest: LZ Complexity')"
    ]
   },
   {
