--- a/INFLUENZA.ipynb
+++ b/INFLUENZA.ipynb
@@ -249,6 +249,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Similarly to the MSA tree plot, the sequences are groupped as expected except for one H5N1 virus within H1N1 branch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<p style=\"font-size:15pt;font-weight:bold;border:1px solid;border-color:#aabbcc;padding:15px;background:#ddffee;border-radius:15px\">4. Lempel-Ziv Complexity </p>"
    ]
   },
@@ -304,6 +311,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The LZ Complexity method seems to be least effective as the groups of the viruses are mixed within and between the branches. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Use LZMatrix function to compare viruses sequences and use this matrix to construct a phylogenetic tree (UPGMA method). Plot a tree and make a comment on it."
    ]
   },
@@ -323,16 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Multiple Sequence Alignment (MSA): 249.96060967445374\n",
-      "K-mers: 3.3982269763946533\n",
-      "Lempel-Ziv Complexity: 691.3010659217834\n"
+      "Multiple Sequence Alignment (MSA): 1445.8393630981445\n",
+      "K-mers: 3.274223804473877\n",
+      "Lempel-Ziv Complexity: 53.22285318374634\n",
+      "The fastest method: K-mers; The slowest: LZ Complexity\n"
      ]
     }
    ],
